<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editAlturaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_altura"/>

    <EditText
        android:id="@+id/editPesoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_peso"/>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_calcular"/>
</LinearLayout>